--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
       <p>Til að spila leikinn: opnið <dfn>Console</dfn> í <dfn>DevTools</dfn> vafra með t.d. <kbd>Control+Shift+I</kbd> á Windows eða <kbd>Command+Option+I</kbd> á Mac.<p>
       <p>Skrifið <code>play()</code> í <dfn>Console</dfn> til að spila eða <code>games()</code> til að fá upplýsingar um spilaða leiki.</p>
     </main>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
